// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-ol> Component basic usage with attributes 1`] = `
<bolt-ol data-attr="some attribute"
         onclick="location.href=&#039;https://pega.com&#039;"
>
  <replace-with-grandchildren>
    <ol data-attr="some attribute"
        onclick="location.href=&#039;https://pega.com&#039;"
        class="c-bolt-ol"
    >
      <bolt-li>
        <replace-with-grandchildren>
          <li class="c-bolt-li c-bolt-li--ol-item ">
            Do not include any data or information in your posts that are confidential!
          </li>
        </replace-with-grandchildren>
      </bolt-li>
      <bolt-li>
        <replace-with-grandchildren>
          <li class="c-bolt-li c-bolt-li--ol-item ">
            Apply basic practices for collaborative work.
          </li>
        </replace-with-grandchildren>
      </bolt-li>
      <bolt-li>
        <replace-with-grandchildren>
          <li class="c-bolt-li c-bolt-li--ol-item ">
            Be honest, respectful, trustworthy and helpful.
          </li>
        </replace-with-grandchildren>
      </bolt-li>
      <bolt-li>
        <replace-with-grandchildren>
          <li class="c-bolt-li c-bolt-li--ol-item c-bolt-li--last-item">
            Answer questions authoritatively and concisely. Avoid cluttering discussions with noise.
          </li>
        </replace-with-grandchildren>
      </bolt-li>
    </ol>
  </replace-with-grandchildren>
</bolt-ol>
`;

exports[`<bolt-ol> Component with nested <bolt-ol> list compiles 1`] = `
<bolt-ol>
  <replace-with-grandchildren>
    <ol class="c-bolt-ol">
      <bolt-li>
        <replace-with-grandchildren>
          <li class="c-bolt-li c-bolt-li--ol-item ">
            Do not include any data or information in your posts that are confidential!
          </li>
        </replace-with-grandchildren>
      </bolt-li>
      <bolt-li>
        <replace-with-grandchildren>
          <li class="c-bolt-li c-bolt-li--ol-item ">
            Apply basic practices for collaborative work.
          </li>
        </replace-with-grandchildren>
      </bolt-li>
      <bolt-li>
        <replace-with-grandchildren>
          <li class="c-bolt-li c-bolt-li--ol-item ">
            Be honest, respectful, trustworthy and helpful.
          </li>
        </replace-with-grandchildren>
      </bolt-li>
      <bolt-li>
        <replace-with-grandchildren>
          <li class="c-bolt-li c-bolt-li--ol-item ">
            Answer questions authoritatively and concisely. Avoid cluttering discussions with noise.
          </li>
        </replace-with-grandchildren>
      </bolt-li>
      <bolt-li>
        <replace-with-grandchildren>
          <li class="c-bolt-li c-bolt-li--ol-item ">
            Answer questions authoritatively and concisely.
            <bolt-ol>
              <replace-with-grandchildren>
                <ol class="c-bolt-ol">
                  <bolt-li>
                    <replace-with-grandchildren>
                      <li class="c-bolt-li c-bolt-li--ol-item ">
                        Item 1
                      </li>
                    </replace-with-grandchildren>
                  </bolt-li>
                  <bolt-li>
                    <replace-with-grandchildren>
                      <li class="c-bolt-li c-bolt-li--ol-item ">
                        Item 2
                      </li>
                    </replace-with-grandchildren>
                  </bolt-li>
                  <bolt-li>
                    <replace-with-grandchildren>
                      <li class="c-bolt-li c-bolt-li--ol-item ">
                        Item 3
                      </li>
                    </replace-with-grandchildren>
                  </bolt-li>
                  <bolt-li>
                    <replace-with-grandchildren>
                      <li class="c-bolt-li c-bolt-li--ol-item c-bolt-li--last-item">
                        Item 4
                      </li>
                    </replace-with-grandchildren>
                  </bolt-li>
                </ol>
              </replace-with-grandchildren>
            </bolt-ol>
          </li>
        </replace-with-grandchildren>
      </bolt-li>
    </ol>
  </replace-with-grandchildren>
</bolt-ol>
`;

exports[`<bolt-ol> Component with nested <bolt-ul> list compiles 1`] = `
<bolt-ol>
  <replace-with-grandchildren>
    <ol class="c-bolt-ol">
      <bolt-li>
        <replace-with-grandchildren>
          <li class="c-bolt-li c-bolt-li--ol-item ">
            Do not include any data or information in your posts that are confidential!
          </li>
        </replace-with-grandchildren>
      </bolt-li>
      <bolt-li>
        <replace-with-grandchildren>
          <li class="c-bolt-li c-bolt-li--ol-item ">
            Apply basic practices for collaborative work.
          </li>
        </replace-with-grandchildren>
      </bolt-li>
      <bolt-li>
        <replace-with-grandchildren>
          <li class="c-bolt-li c-bolt-li--ol-item ">
            Be honest, respectful, trustworthy and helpful.
          </li>
        </replace-with-grandchildren>
      </bolt-li>
      <bolt-li>
        <replace-with-grandchildren>
          <li class="c-bolt-li c-bolt-li--ol-item ">
            Answer questions authoritatively and concisely. Avoid cluttering discussions with noise.
          </li>
        </replace-with-grandchildren>
      </bolt-li>
      <bolt-li>
        <replace-with-grandchildren>
          <li class="c-bolt-li c-bolt-li--ol-item ">
            Answer questions authoritatively and concisely.
            <bolt-ul>
              <replace-with-grandchildren>
                <ul class="c-bolt-ul">
                  <bolt-li>
                    <replace-with-grandchildren>
                      <li class="c-bolt-li c-bolt-li--ul-item ">
                        Item 1
                      </li>
                    </replace-with-grandchildren>
                  </bolt-li>
                  <bolt-li>
                    <replace-with-grandchildren>
                      <li class="c-bolt-li c-bolt-li--ul-item ">
                        Item 2
                      </li>
                    </replace-with-grandchildren>
                  </bolt-li>
                  <bolt-li>
                    <replace-with-grandchildren>
                      <li class="c-bolt-li c-bolt-li--ul-item ">
                        Item 3
                      </li>
                    </replace-with-grandchildren>
                  </bolt-li>
                  <bolt-li>
                    <replace-with-grandchildren>
                      <li class="c-bolt-li c-bolt-li--ul-item c-bolt-li--last-item">
                        Item 4
                      </li>
                    </replace-with-grandchildren>
                  </bolt-li>
                </ul>
              </replace-with-grandchildren>
            </bolt-ul>
          </li>
        </replace-with-grandchildren>
      </bolt-li>
    </ol>
  </replace-with-grandchildren>
</bolt-ol>
`;
